# one-ball

./: Makefile  README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml  wait-for-it.sh
api/api/: __init__.py  celery.py  settings.py  urls.py
api/v1/: constance.py
api/v1/management/commands/: create_initial_data.py  import_grades.py  import_win_lose.py
api/v1/management/commands/ini/2025/: dragons.csv  fighters.csv  lions.csv  marines.csv  tigers.csv
api/v1/management/ini/: baystars.csv  buffaloes.csv  carp.csv  dragons.csv  eagles.csv  fighters.csv  giants.csv  hawks.csv  lions.csv  marines.csv  swallows.csv  tigers.csv
api/v1/migrations/: 0001_initial.py
api/v1/models/: __init__.py  grades.py  mixin.py  player.py  team.py
api/v1/serializers/: __init__.py  grades.py  team.py
api/v1/tasks/: __init__.py  import_grade.py  import_win_lose.py
api/v1/utils/: data_fix.py  url.py  web_crawling.py
api/v1/views/: __init__.py  ping.py
nginx/: default.conf
