[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "django>=5.1,<6.0",
    "django-extensions>=4.1",
    "django-safedelete>=1.4.1",
    "djangorestframework<=3.16.1",
    "ipython>=9.4.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
    "ruff>=0.12.9",
    "celery>=5.3.6",
    "redis>=5.0.4",
    "django-celery-results>=2.6.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "pylint>=3.3.8",
]
